--- a/lib/verbatim.tex
+++ b/lib/verbatim.tex
@@ -9,3 +9,6 @@
 {\obeyspaces\global\let =\ } % let active space = control space
 \def\listing#1{\par\begingroup\setupverbatim\input#1 \endgroup}
 
+\def\verbatim{\begingroup\setupverbatim\doverbatim}
+\def\doverbatim#1{\def\next##1#1{##1\endgroup}\next}
+
